[gd_scene format=3 uid="uid://ci4galkmc7v4a"]

[ext_resource type="Script" uid="uid://bje5q4v3if27r" path="res://Scripts/graph_node_URL.gd" id="1_lo1fl"]

[node name="GraphNode" type="GraphNode" unique_id=1672945934 node_paths=PackedStringArray("url", "size_fonts")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -635.0
offset_top = -360.0
offset_right = -195.0
offset_bottom = -204.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_lo1fl")
url = NodePath("HBoxContainer/URL")
size_fonts = NodePath("Container/Container Size/Container Size Title/Font Size Title")
metadata/_edit_horizontal_guides_ = [-8.0, -8.0]

[node name="Container" type="HBoxContainer" parent="." unique_id=1614242062]
layout_mode = 2
theme_override_constants/separation = 125

[node name="Container Size" type="VBoxContainer" parent="Container" unique_id=958391021]
layout_mode = 2

[node name="Container Size Title" type="HBoxContainer" parent="Container/Container Size" unique_id=2122979325]
layout_mode = 2

[node name="Font Size Title" type="SpinBox" parent="Container/Container Size/Container Size Title" unique_id=397914048]
layout_mode = 2
min_value = 1.0
max_value = 80.0
value = 16.0

[node name="CheckBox" type="Button" parent="Container" unique_id=499506831]
layout_mode = 2
text = "Fechar"

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=2072020754]
layout_mode = 2

[node name="URL" type="LineEdit" parent="HBoxContainer" unique_id=577137378]
clip_contents = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "URL:"
alignment = 1
expand_to_text_length = true

[node name="Go URL" type="Button" parent="HBoxContainer" unique_id=1017148609]
layout_mode = 2
text = "â†’"

[node name="Container Slots" type="HBoxContainer" parent="." unique_id=1260961243]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button Add" type="Button" parent="Container Slots" unique_id=1937745558]
clip_contents = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "+"

[node name="Button Sub" type="Button" parent="Container Slots" unique_id=466702399]
clip_contents = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "-"

[connection signal="node_deselected" from="." to="." method="_on_node_deselected"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
[connection signal="value_changed" from="Container/Container Size/Container Size Title/Font Size Title" to="." method="_on_font_size_title_value_changed"]
[connection signal="pressed" from="Container/CheckBox" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="HBoxContainer/Go URL" to="." method="_on_go_url_pressed"]
[connection signal="pressed" from="Container Slots/Button Add" to="." method="_on_button_add_pressed"]
[connection signal="pressed" from="Container Slots/Button Sub" to="." method="_on_button_sub_pressed"]
